[package]
name = "crab-picasso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
infer = "0.15.0"
log = "0.4.20"
openai_api_rust = "0.1.8"
reqwest = { version = "0.11.22", features = [ "blocking" ] }
snafu = "0.7.5"
tempfile = "3.8.0"
